--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,6 +14,7 @@ QueueingModel.i_MM1,
 summary.o_MM1,
 RO.o_MM1,
 Pn.o_MM1,
+Qn.o_MM1,
 Lq.o_MM1,
 Wq.o_MM1,
 L.o_MM1,
@@ -31,8 +32,10 @@ Lq.o_MMC,
 Wq.o_MMC,
 L.o_MMC,
 W.o_MMC,
-Wqq.o_MMC, 
+Wqq.o_MMC,
+Lqq.o_MMC,
 Pn.o_MMC,
+Qn.o_MMC,
 NewInput.MM1KK,
 CheckInput.i_MM1KK,
 QueueingModel.i_MM1KK,
@@ -40,14 +43,16 @@ summary.o_MM1KK,
 Inputs.o_MM1KK,
 RO.o_MM1KK,
 Lq.o_MM1KK,
-Wq.o_MM1KK,
+Lqq.o_MM1KK,
 Throughput.o_MM1KK,
 L.o_MM1KK,
 W.o_MM1KK,
+Wq.o_MM1KK,
 Wqq.o_MM1KK,
 WWs.o_MM1KK,
 SP.o_MM1KK,
 Pn.o_MM1KK,
+Qn.o_MM1KK,
 NewInput.MMCKK,
 CheckInput.i_MMCKK,
 QueueingModel.i_MMCKK,
@@ -55,12 +60,14 @@ summary.o_MMCKK,
 Inputs.o_MMCKK,
 L.o_MMCKK,
 Lq.o_MMCKK,
+Lqq.o_MMCKK,
 Throughput.o_MMCKK,
 W.o_MMCKK,
 RO.o_MMCKK,
 Wq.o_MMCKK,
 Wqq.o_MMCKK,
 Pn.o_MMCKK,
+Qn.o_MMCKK,
 NewInput.MMCKM,
 CheckInput.i_MMCKM,
 QueueingModel.i_MMCKM,
@@ -68,12 +75,14 @@ summary.o_MMCKM,
 Inputs.o_MMCKM,
 L.o_MMCKM,
 Lq.o_MMCKM,
+Lqq.o_MMCKM,
 Throughput.o_MMCKM,
 W.o_MMCKM,
 RO.o_MMCKM,
 Wq.o_MMCKM,
 Wqq.o_MMCKM,
 Pn.o_MMCKM,
+Qn.o_MMCKM,
 NewInput.MMInfKK,
 CheckInput.i_MMInfKK,
 QueueingModel.i_MMInfKK,
@@ -88,19 +97,21 @@ RO.o_MMInfKK,
 Wq.o_MMInfKK,
 Wqq.o_MMInfKK,
 Pn.o_MMInfKK,
+Qn.o_MMInfKK,
 NewInput.MMInf,
 CheckInput.i_MMInf,
 QueueingModel.i_MMInf,
 summary.o_MMInf,
 Inputs.o_MMInf,
 L.o_MMInf,
-W.o_MMInf,
-RO.o_MMInf,
 Lq.o_MMInf,
+Lqq.o_MMInf,
+W.o_MMInf,
 Wq.o_MMInf,
 Wqq.o_MMInf,
-Lqq.o_MMInf,
+RO.o_MMInf,
 Pn.o_MMInf,
+Qn.o_MMInf,
 NewInput.MM1K,
 CheckInput.i_MM1K,
 QueueingModel.i_MM1K,
@@ -110,24 +121,27 @@ L.o_MM1K,
 W.o_MM1K,
 RO.o_MM1K,
 Lq.o_MM1K,
+Lqq.o_MM1K,
 Wq.o_MM1K,
 Wqq.o_MM1K,
 W.o_MM1K,
 Pn.o_MM1K,
+Qn.o_MM1K,
 Throughput.o_MM1K,
 NewInput.MMCK,
 CheckInput.i_MMCK,
 QueueingModel.i_MMCK,
 summary.o_MMCK,
 Inputs.o_MMCK,
-L.o_MMCK,
-W.o_MMCK,
 RO.o_MMCK,
+L.o_MMCK,
 Lq.o_MMCK,
+Lqq.o_MMCK,
+W.o_MMCK,
 Wq.o_MMCK,
 Wqq.o_MMCK,
-W.o_MMCK,
 Pn.o_MMCK,
+Qn.o_MMCK,
 Throughput.o_MMCK,
 NewInput.MMCC,
 CheckInput.i_MMCC,
@@ -135,13 +149,14 @@ QueueingModel.i_MMCC,
 summary.o_MMCC,
 Inputs.o_MMCC,
 L.o_MMCC,
-W.o_MMCC,
-RO.o_MMCC,
 Lq.o_MMCC,
+Lqq.o_MMCC,
+W.o_MMCC,
 Wq.o_MMCC,
 Wqq.o_MMCC,
-W.o_MMCC,
+RO.o_MMCC,
 Pn.o_MMCC,
+Qn.o_MMCC,
 Throughput.o_MMCC,
 NewInput.OJN,
 CheckInput.i_OJN,
@@ -231,6 +246,7 @@ L,
 W,
 Wqq,
 Pn,
+Qn,
 Lqq,
 Throughput,
 WWs,
@@ -389,8 +405,27 @@ S3method(Pn, o_MMCKM)
 S3method(Pn, o_MMInfKK)
 S3method(Pn, o_OJN)
 
+S3method(Qn, o_MM1)
+S3method(Qn, o_MM1K)
+S3method(Qn, o_MMC)
+S3method(Qn, o_MMInf)
+S3method(Qn, o_MMCK)
+S3method(Qn, o_MMCC)
+S3method(Qn, o_MM1KK)
+S3method(Qn, o_MMCKK)
+S3method(Qn, o_MMCKM)
+S3method(Qn, o_MMInfKK)
+
+
 S3method(Lqq, o_MM1)
+S3method(Lqq, o_MM1K)
+S3method(Lqq, o_MMC)
 S3method(Lqq, o_MMInf)
+S3method(Lqq, o_MMCK)
+S3method(Lqq, o_MMCC)
+S3method(Lqq, o_MM1KK)
+S3method(Lqq, o_MMCKK)
+S3method(Lqq, o_MMCKM)
 S3method(Lqq, o_MMInfKK)
 
 S3method(Throughput, o_MM1)
