--- a/NAMESPACE
+++ b/NAMESPACE
@@ -159,6 +159,8 @@ Pn.o_MMCC,
 Qn.o_MMCC,
 Throughput.o_MMCC,
 NewInput.OJN,
+NewInput2.OJN,
+NewInput3.OJN,
 CheckInput.i_OJN,
 QueueingModel.i_OJN,
 Throughput.o_OJN,
@@ -170,6 +172,8 @@ Lk.o_OJN,
 Wk.o_OJN,
 Pn.o_OJN,
 NewInput.CJN,
+NewInput2.CJN,
+NewInput3.CJN,
 CheckInput.i_CJN,
 QueueingModel.i_CJN,
 Inputs.o_CJN,
